--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -128,12 +128,19 @@ header .buttons a {
 .product .header .price {
     position: absolute;
     z-index: 1;
-    bottom: 10px;
-    right: 10px;
+    bottom: 20px;
+    right: 20px;
+    padding: 5px;
+    background-color: #fff;
+    border-radius: 5px;
+    color: #206da0;
+    font-weight: 700;
+    border: 1px solid #bbe2ff;
 }
 
 .product .header img {
     width: 100%;
+    border-radius: 10px;
 }
 
 .product .footer p {
@@ -195,6 +202,26 @@ footer {
     flex-direction: column;
     gap: 15px;
     align-items: center;
+}
+
+/*  Auth section */
+
+.auth {
+    padding: 40px 0;
+}
+
+.auth form {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    width: 400px;
+    margin: 0 auto;
+}
+
+.auth form .form-group {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
 
 
